feat: expose JQ engine via endpoint KRA-705
